--- a/views/customer/productview.handlebars
+++ b/views/customer/productview.handlebars
@@ -70,6 +70,7 @@
                                 <input type="text" name="price" value="{{money2dp discprice}}" hidden>
                                 <input type="text" name="storename" value="{{pdetails.storename}}" hidden>
                                 <input type="text" id="customqn" name="customqn" value="{{pdetails.customqn}}" hidden>
+                            </div>
                             <div class="pro-details-color-wrap">
                             {{#ifCond pdetails.customqn '!=' ""}}
                             <span>{{pdetails.customqn}}</span>
