--- a/views/customer/customers_checkout.handlebars
+++ b/views/customer/customers_checkout.handlebars
@@ -4,7 +4,7 @@
     </script>
 <link href="https://unpkg.com/gijgo@1.9.11/css/gijgo.min.css" rel="stylesheet" type="text/css" />
 <script src="https://unpkg.com/gijgo@1.9.11/js/gijgo.min.js" type="text/javascript"></script>
-
+<script src="main.js" type="text/javascript"></script>
 <div class="breadcrumb-area pt-35 pb-35 bg-gray-3">
     <div class="container">
         <div class="breadcrumb-content text-center">
@@ -28,55 +28,57 @@
                             <div class="col-lg-6 col-md-6">
                                 <div class="billing-info mb-20">
                                     <label for="firstname">FirstName</label>
-                                    <input type="text" name="first-name" placeholder="First Name"
-                                        value="{{user_details.firstname}}">
+                                    <input type="text" name="firstNamee" placeholder="First Name"
+                                        value="{{user_details.firstname}}{{firstNamee}}" id="fNameIn">
                                 </div>
                             </div>
                             <div class="col-lg-6 col-md-6">
                                 <div class="billing-info mb-20">
                                     <label for="lastname">LastName</label>
-                                    <input type="text" name="last-name" placeholder="Last Name"
-                                        value="{{user_details.lastname}}">
+                                    <input type="text" name="lastNamee" placeholder="Last Name"
+                                        value="{{user_details.lastname}}{{lastNamee}}">
                                 </div>
                             </div>
                             <div class="col-lg-12">
                                 <div class="billing-info mb-20">
                                     <label for="Address1">Address Line 1</label>
-                                    <input type="text" name="Address-Line-1" placeholder="Address "
-                                        value="{{user_details.address1 }}">
+                                    <input type="text" name="Addressline1" placeholder="Address "
+                                        value="{{user_details.address1 }}{{Addressline1}}">
                                 </div>
                             </div>
                             <div class="col-lg-12">
                                 <div class="billing-info mb-20">
                                     <label for="Address2">Address Line 2</label>
-                                    <input type="text" name="Address-Line-2" placeholder="Address-Line-2"
-                                        value="{{user_details.address2 }}">
+                                    <input type="text" name="Addressline2" placeholder="Address-Line-2"
+                                        value="{{user_details.address2 }}{{Addressline2}}">
                                 </div>
                             </div>
                             <div class="col-lg-12">
                                 <div class="billing-info mb-20">
                                     <label for="city">City</label>
-                                    <input type="text" name="city" placeholder="city" value="{{user_details.city }}">
+                                    <input type="text" name="city" placeholder="city"
+                                        value="{{user_details.city }}{{city}}">
                                 </div>
                             </div>
                             <div class="col-lg-12">
                                 <div class="billing-info mb-20">
                                     <label for="postal_code">Postal Code</label>
-                                    <input type="text" name="postal-code" placeholder="Postal Code"
-                                        value="{{user_details.postalcode}}">
+                                    <input type="text" name="postalcode" placeholder="Postal Code"
+                                        value="{{user_details.postalcode}}{{postalcode}}">
                                 </div>
                             </div>
                             <div class="col-lg-12">
                                 <div class="billing-info mb-20">
                                     <label for="Email">Email</label>
-                                    <input type="text" name="email" placeholder="email" value="{{user_details.email}}">
+                                    <input type="text" name="email" placeholder="email"
+                                        value="{{user_details.email}}{{email}}">
                                 </div>
                             </div>
                             <div class="col-lg-12">
                                 <div class="billing-info mb-20">
                                     <label for="phone_number">Phone Number</label>
-                                    <input type="text" name="phone_number" placeholder="phone_number"
-                                        value="{{user_details.phoneno}}">
+                                    <input type="text" name="phonenumber" placeholder="phone_number"
+                                        value="{{user_details.phoneno}}{{phonenumber}}">
                                 </div>
                             </div>
                         </div>
@@ -94,23 +96,23 @@
                                 <div class="billing-info mb-20">
                                     <label class="font-italic">Delivery Time</label>
                                     <p>Choose your preferred delivery time</p>
-                                    <select id="dTime" name="dTime" value="dTime">
-                                        <option value="">0900 to 1000</option>
-                                        <option value="2">1000 to 1100</option>
-                                        <option value="3">1100 to 1200</option>
-                                        <option value="4">1200 to 1300</option>
-                                        <option value="5">1300 to 1400</option>
-                                        <option value="6">1400 to 1500</option>
-                                        <option value="7">1500 to 1600</option>
-                                        <option value="8">1600 to 1700</option>
-                                        <option value="9">1700 to 1800</option>
+                                    <select id="dTime" name="dTime">
+                                        <option value="0900-1000">0900 to 1000</option>
+                                        <option value="1000-1100">1000 to 1100</option>
+                                        <option value="1100-1200">1100 to 1200</option>
+                                        <option value="1200-1300">1200 to 1300</option>
+                                        <option value="1300-1400">1300 to 1400</option>
+                                        <option value="1400-1500">1400 to 1500</option>
+                                        <option value="1500-1600">1500 to 1600</option>
+                                        <option value="1600-1700">1600 to 1700</option>
+                                        <option value="1700-1800">1700 to 1800</option>
                                     </select>
                                 </div>
                             </div>
                             <div class="col-lg-12">
                                 <div class="billing-info mb-20">
                                     <label for="delivery_date">Delivery Date</label>
-                                    <input id="datepicker" width="200" name="delivery_date" placeholder="delivery_date"
+                                    <input id="datepicker" width="200" name="deliverydate" placeholder="delivery_date"
                                         value="{{request.form.delivery_date }}" readonly />
                                 </div>
                             </div>
@@ -120,13 +122,18 @@
                                         <button type="submit"><span>Confirm</span></button>
                                     </div>
                                 </form> --}}
-                                <a href="/transaction_complete"><button class="btn-hover checkout-btn" method="post"
-                                        type="submit">Confirm</button></a>
+                                {{#if sess.myBillingDetails}}
+                                    <button id="cancelBtn" class="btn-hover checkout-btn" method="post" type="submit">Cancel</button>
+                                {{else}}
+                                    <button id="confirmBtn" class="btn-hover checkout-btn" method="post" type="submit">Confirm</button>
+                                {{/if}}
+                                {{!-- <button id="billingConfirmBtn" class="btn-hover checkout-btn" method="post"
+                                    type="submit">Confirm</button> --}}
 
                             </div>
                         </div>
                     </form>
-                    <div class="checkout-account mt-25">
+                    {{!-- <div class="checkout-account mt-25">
                         <input class="checkout-toggle" type="checkbox">
                         <span>Ship to a different address?</span>
                     </div>
@@ -202,7 +209,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> --}}
                     </form>
                 </div>
             </div>
@@ -219,43 +226,51 @@
                                 </ul>
                             </div>
                             <div class="your-order-middle">
+                                {{#if sess.myCart}}
                                 {{#each sess.myCart}}
                                 <ul>
                                     {{!-- <span>{{this.itemId}}</span> --}}
-                                    
-                                    <li><span class="order-middle-left">{{link text='<i class="fa fa-times"></i>' url="/deleteSessItem/"
-                                            id=this.itemId}} {{this.itemname}}
+
+                                    <li><span class="order-middle-left">{{link text='<i class="fa fa-times"></i>'
+                                            url="/deleteSessItem/"
+                                            id=this.itemId}}<a href="/view/{{this.id}}">{{this.itemname}}</a>
                                             {{!-- {{link text='<i class="fa fa-times"></i>' url="/deleteSessItem/"
                                             id=this.itemId}} --}}
                                         </span>
+
                                         <span class="order-quantity">{{this.qty}}</span>
                                         <span class="order-price">{{this.subtotal}}</span>
                                     </li>
                                     <li style="margin-left:10px;">{{this.customqn}}</li>
                                     <li style="margin-left:15px;">{{this.custom}}</li>
                                 </ul>
+
+                                {{/each}}
                                 {{else}}
                                 <ul>
                                     <li>Cart is empty!</li>
                                 </ul>
-                                {{/each}}
+                                {{/if}}
                                 {{!-- <ul>
                                     <li><span class="order-middle-left"><a href=><i class="fa fa-times"></i></a></span>
                                         <span class="order-price"></span>
                                     </li>
                                 </ul> --}}
-                                
+
 
                                 <div class="your-order-total">
                                     <ul>
                                         <li class="order-total">Total</li>
-                                        <li>{{this.total}}</li>
+                                        <li>{{sess.cartTotal}}</li>
                                     </ul>
                                 </div>
                                 <!--                                 <p>Note: Self Collection is available only from 9am-6pm from monday to friday.</p>-->
                             </div>
                         </div>
                     </div>
+
+                    {{#ifCond sess.myCart '!=' "" }}
+                    {{#unless errors}}
                     <div class="Place-order mt-25">
                         <div id="smart-button-container">
                             <div style="text-align: center;">
@@ -273,42 +288,52 @@
                         <script src="https://www.paypal.com/sdk/js?client-id=sb&currency=SGD"
                             data-sdk-integration-source="button-factory"></script>
                         <script>
-                            $('#datepicker').datepicker({
-                                format: 'dd/mm/yyyy',
-                            value: new Date().toLocaleDateString('EN-SG'),
-                            uiLibrary: 'bootstrap4',
-                            });
+                                function initPayPalButton() {
+                  
+                                    paypal.Buttons({
+                                        style: {
+                                            shape: 'rect',
+                                            color: 'gold',
+                                            layout: 'vertical',
+                                            label: 'checkout',
 
-                            function initPayPalButton() {
-                                paypal.Buttons({
-                                    style: {
-                                        shape: 'rect',
-                                        color: 'gold',
-                                        layout: 'vertical',
-                                        label: 'checkout',
+                                        },
 
-                                    },
+                                        createOrder: function (data, actions) {
+                                            element = document.getElementById("cancelBtn");
+                                            if(element == null){
+                                                alert("Please confirm billing details!")
+                                                return false;
+                                            }
+                                            return actions.order.create({
+                                                purchase_units: [{ "amount": { "currency_code": "SGD", "value": 1 } }]
+                                            });
+                                        },
 
-                                    createOrder: function (data, actions) {
-                                        return actions.order.create({
-                                            purchase_units: [{ "amount": { "currency_code": "SGD", "value": 1 } }]
-                                        });
-                                    },
+                                        onApprove: function (data, actions) {
+                                            return actions.order.capture().then(function (details) {
+                                                window.location.replace("/transaction_complete");
+                                            });
+                                        },
 
-                                    onApprove: function (data, actions) {
-                                        return actions.order.capture().then(function (details) {
-                                            window.location.replace("/transaction_complete");
-                                        });
-                                    },
-
-                                    onError: function (err) {
-                                        console.log(err);
-                                    }
-                                }).render('#paypal-button-container');
+                                        onError: function (err) {
+                                            console.log(err);
+                                            
+                                        }
+                                    }).render('#paypal-button-container');
                             }
-                            initPayPalButton();
+                                initPayPalButton();
                         </script>
+                        {{/unless}}
+                        {{/ifCond}}
 
+                        <script>
+                                $('#datepicker').datepicker({
+                                    format: 'dd/mm/yyyy',
+                                value: new Date().toLocaleDateString('EN-SG'),
+                                uiLibrary: 'bootstrap4',
+                            });
+                        </script>
                     </div>
                 </div>
             </div>
