--- a/views/customer/flashdeals.handlebars
+++ b/views/customer/flashdeals.handlebars
@@ -5,41 +5,52 @@
             <div class="col-lg-7 col-md-12 ml-auto mr-auto">
                 <div class="login-register-wrapper">
                     <div class="login-register-tab-list nav">
+                        {{!-- {{today}} --}}
                         <a data-toggle="tab" href="#lg2">
                             <h4 style="color:rgb(230, 19, 19); font-size: 30px;"> ⚡ FLASH DEALS ⚡ </h4>
                             <br>
                             {{#if deals}}
+                            {{!-- {{#ifCond dstartdate '==' today}} --}}
                             <h5 style="text-align: center; font-weight:bold; font-size: 18px;">Ends in</h5>
                             <p id="time" style="text-align: center; font-size: 30px; margin-top: 0px;"></p>
                         </a>
                     </div>
                     {{#each deals}}
                     <div style="position: relative; text-align: center;">
+                        {{!-- {{now}} --}}
+                        {{!-- {{dstartdate}}
+                        {{today}}
+                         --}}
                         {{!-- <img src="/img/suit.jpeg" style="width:50%;opacity: 0.8;"> --}}
                         {{#each ../shopprod}}
-                        {{#ifCond id '==' ../catid}}
-                         <a href="/view/{{id}}">
-                            <img src="/uploads/products/{{image}}" style="width: 50%; height: 230px; opacity: 0.8;">
-                        </a>
-                        <div
-                            style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color:white; font-size:20px;font-weight: bold; text-shadow: 1px 2px black;">
-                            {{name}}</div>
-                        <div
-                            style="position: absolute; top: 75%; left: 50%; transform: translate(-50%, -50%); color:white; opacity: 0.9; font-size:19px; text-decoration: line-through; text-shadow: 1px 1px black; font-weight: 700;">
-                            ${{money2dp price}}</div>
-                        
-                        {{/ifCond}}
+                        {{!-- {{#ifCond dstartdate '==' ../today}} --}}
+                            {{#ifCond id '==' ../catid}}
+                                <a href="/view/{{id}}">
+                                    <img src="/uploads/products/{{image}}" style="width: 50%; height: 230px; opacity: 0.8;">
+                                </a>
+                                <div
+                                    style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color:white; font-size:20px;font-weight: bold; text-shadow: 1px 2px black;">
+                                    {{name}}</div>
+                                <div
+                                    style="position: absolute; top: 75%; left: 50%; transform: translate(-50%, -50%); color:white; opacity: 0.9; font-size:19px; text-decoration: line-through; text-shadow: 1px 1px black; font-weight: 700;">
+                                    ${{money2dp price}}</div>
+                            {{/ifCond}}
+                        {{!-- {{/ifCond}} --}}
                         {{/each}}
+                       
                         <div
                             style="position: absolute; top: 88%; left: 50%; transform: translate(-50%, -50%); color: rgb(218, 34, 59); font-size:32px; font-weight: bold; text-shadow: 1px 0px rgb(235, 165, 137), 1px 2px rgb(235, 165, 137), 2px 2px rgb(235, 165, 137), 2px 3px khaki, 3px 3px khaki,3px 4px khaki;">
                             ${{discountp}}</div>
+                            
                     </div>
                     <br><br>
+                    
                     {{/each}}
                     {{else}}
                     <br>
                     <h5 style="text-align: center; font-weight:bold; font-size: 16px;">There are no flash deals today!
                     </h5>
+                    {{!-- {{/ifCond}} --}}
                     {{/if}}
                 </div>
             </div>
@@ -48,7 +59,7 @@
 </div>
 <script>
     // Set the date we're counting down to
-    var countDownDate = new Date("July 30, 2021 00:00:00").getTime();
+    var countDownDate = new Date("August 18, 2021 23:59:59").getTime();
 
     // Update the count down every 1 second
     var x = setInterval(function () {
@@ -74,4 +85,5 @@
             document.getElementById("time").innerHTML = "00h 00m 00s";
         }
     }, 1000);
+
 </script>
